--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -6,7 +6,8 @@
     <title layout:title-pattern="$CONTENT_TITLE - $LAYOUT_TITLE">music mgmt</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" th:href="@{/styles/style.js}">
+    <script type="text/javascript" th:src="@{/js/script.js}"></script>
 </head>
 <body>
 <div class="container">
