--- a/src/main/resources/templates/tables/artist-table.html
+++ b/src/main/resources/templates/tables/artist-table.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout.html}">
+<html lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout.html}">
 <head>
 </head>
 <body>
@@ -8,8 +8,11 @@
 <!--        <form action="#" th:action="@{/}" method="get">
             <button type="submit"  class="btn btn-primary btn-sm">Back</button>
         </form>-->
-        <a th:href="@{/home}"><button class="btn btn-primary btn-sm">Back</button></a>
-        <input type="text" id="search-input" onkeyup="searchTable()" placeholder="Search results..." title="Type in an artist name">
+        <input action="action" onclick="window.history.back()" value="Back" type="button" class="btn btn-primary"/>
+        <input type="text" id="search-input" onkeyup="searchTable('artist-table')" placeholder="Search results..." title="Type in an artist name">
+    </div>
+    <div th:if="${succesNotification}" id="success-notification" class="mt-4">
+        <p class="alert alert-info">Successfully added new artist</p>
     </div>
     <div class="row justify-content-md-center">
         <table id="artist-table" class="table">
@@ -26,8 +29,8 @@
             <tr th:each="artist, iStat : ${artists}" th:id="'row' + ${iStat.index}" >
                 <td th:text="${artist.name}"/>
                 <td th:text="${artist.description}"/>
-                <td><a th:href="@{/artist/getmembers(id = ${artist.id})}">members</a></td>
-                <td><a th:href="@{/artist/getreleases(id = ${artist.id})}">releases</a></td>
+                <td><a th:href="@{/artist/get-members(id = ${artist.id}, name = ${artist.name})}">members</a></td>
+                <td><a th:href="@{/artist/get-releases(id = ${artist.id},  name = ${artist.name})}">releases</a></td>
                 <td><a th:href="@{/artist/get-edit-artist-form(id = ${artist.id})}"><Button class="btn btn-sm" style="width:100%">Edit</button></a></td>
             </tr>
             </tbody>
@@ -36,26 +39,6 @@
     <div class="row justify-content-md-left">
         <a th:href="@{/artist/get-add-artist-form}"><button class="btn btn-primary btn-sm">Add new</button></a>
     </div>
-    <script>
-    function searchTable() {
-            let input, filter, table, tr, td, i, txtValue;
-            input = document.getElementById("search-input");
-            filter = input.value.toUpperCase();
-            table = document.getElementById("artist-table");
-            tr = table.getElementsByTagName("tr");
-            for (i = 0; i < tr.length; i++) {
-                td = tr[i].getElementsByTagName("td")[0];
-                if (td) {
-                    txtValue = td.textContent || td.innerText;
-                    if (txtValue.toUpperCase().indexOf(filter) > -1) {
-                        tr[i].style.display = "";
-                    } else {
-                        tr[i].style.display = "none";
-                    }
-                }
-            }
-        }
-    </script>
 </section>
 </body>
 </html>
